# marauder

examples/: macro_dll.rs  only-dll.rs  sample_dll.rs  tokio_dll.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
marauder/: Cargo.toml
marauder/src/: injector.rs
marauder/src/hooks/: d3d.rs  directx.rs  mod.rs
marauder/src/windows/: utils.rs  wrappers.rs
