[package]
name = "marauder_macros"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/steele123/mem-rs"
categories = ["games"]
description = "A macro for generating DLLs for memory hacking"
license = "MIT"
keywords = ["memory", "cheat", "hack", "dll", "injection"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[[example]]
name = "only-dll"
path = "../examples/only-dll.rs"
crate-type = ["cdylib"]