[package]
name = "marauder"
version = "0.1.0"
authors = ["Steele Scott <steele@catlab.gg>", "Tyler Hill <tyler@oxide.fi>"]
edition = "2024"
readme = "../README.md"
repository = "https://github.com/steele123/marauder"
description = "A utility library for hacking/reading memory of processes/games."
categories = ["games"]
license = "MIT"
keywords = ["memory", "cheat", "hack", "dll", "injection"]

[dependencies]
marauder_macros = { path = "../macros", optional = true, version = "0.1.0" }
thiserror = "2.0.18"
windows = {version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse"
]}
windows-strings = "0.5.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }

[features]
default = ["full"]
full = ["external", "internal", "injector", "macros"]
external = []
internal = []
injector = []
d2d = []
d3d9 = []
d3d10 = []
d3d11 = []
d3d12 = []
opengl = []
vulkan = []
macros = ["marauder_macros"]

[[example]]
name = "tokio_dll"
path = "../examples/tokio_dll.rs"
crate-type = ["cdylib"]
required-features = ["macros"]

[[example]]
name = "sample_dll"
path = "../examples/sample_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "macro_dll"
path = "../examples/macro_dll.rs"
required-features = ["macros"]
crate-type = ["cdylib"]

[[example]]
name = "injector"
path = "../examples/injector.rs"
required-features = ["injector"]

[[example]]
name = "target_process"
path = "../examples/target_process.rs"
